# linkerd2-proxy

./: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  heaptrack-proxy.sh
.github/workflows/: k3d.yml  mayhem.yml  sync.yaml  sync.yml
hyper-balance/: Cargo.toml
k8s-tests/: Cargo.toml  Dockerfile
k8s-tests/src/: deploy.rs  lib.rs  main.rs  runner.rs  server.rs
linkerd/app/admin/: Cargo.toml
linkerd/app/admin/src/: stack.rs
linkerd/app/core/: Cargo.toml
linkerd/app/gateway/src/: lib.rs
linkerd/app/inbound/: Cargo.toml
linkerd/app/inbound/fuzz/: Cargo.toml
linkerd/app/inbound/src/: accept_ports.rs  detect.rs  direct.rs  lib.rs  server.rs
linkerd/app/inbound/src/http/: mod.rs  router.rs  server.rs  tests.rs
linkerd/app/integration/: Cargo.toml
linkerd/app/outbound/: Cargo.toml
linkerd/app/outbound/src/: discover.rs  endpoint.rs  ingress.rs  lib.rs  switch_logical.rs
linkerd/app/outbound/src/http/: detect.rs  logical.rs
linkerd/app/outbound/src/tcp/: connect.rs  logical.rs  opaque_transport.rs
linkerd/app/src/: dst.rs  env.rs  tap.rs
linkerd/app/test/: Cargo.toml
linkerd/app/test/src/: profile.rs  resolver.rs
linkerd/cache/src/: lib.rs
linkerd/detect/src/: lib.rs
linkerd/dns/name/src/: name.rs
linkerd/duplex/src/: lib.rs
linkerd/error/src/: lib.rs
linkerd/http-metrics/: Cargo.toml
linkerd/http-retry/: Cargo.toml
linkerd/identity/: Cargo.toml
linkerd/identity/src/: lib.rs
linkerd/k8s-tests/: Cargo.toml
linkerd/k8s-tests/src/: lib.rs  main.rs
linkerd/metrics/: Cargo.toml
linkerd/proxy/http/: Cargo.toml
linkerd/proxy/http/src/: server.rs
linkerd/proxy/identity/src/: certify.rs
linkerd/proxy/tap/: Cargo.toml
linkerd/service-profiles/: Cargo.toml
linkerd/service-profiles/src/: client.rs  default.rs  discover.rs  lib.rs
linkerd/stack/src/: lib.rs  new_service.rs
linkerd/tls/: Cargo.toml
linkerd/tls/rustls/: Cargo.toml
linkerd/tls/rustls/src/: client.rs  server.rs
linkerd/tls/rustls/tests/: tls_accept.rs
linkerd/tls/src/: client.rs  lib.rs
linkerd/tls/src/server/: client_hello.rs  mod.rs
linkerd2-proxy/: Cargo.toml
