[workspace]
members = ["."]
resolver = "2"

[package]
name = "linkerd-k8s-tests"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
publish = false
description = "Proxy integration test runner for Kubernetes"

[dependencies]
anyhow = "1"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.57.0", default-features = false, features = ["client", "native-tls"] }
ort-grpc = { git = "https://github.com/olix0r/ort", tag = "v0.1.16" }
linkerd-tracing = { path = "../linkerd/tracing" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
