[package]
name = "k8s-tests"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
publish = false
description = "Proxy integration test runner for Kubernetes"

[dependencies]
anyhow = "1"
#chrono = "0.4"
futures = "0.3"
hyper = "0.14"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_21"] }
kube = { version = "0.57.0", default-features = false, features = ["client", "derive", "native-tls"] }
#ort-grpc = { git = "https://github.com/olix0r/ort", tag = "v0.1.16" }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
