[package]
name = "linkerd-identity"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
license = "Apache-2.0"
edition = "2018"

[features]
default = []
test-util = []

[dependencies]
async-trait = "0.1"
linkerd-dns-name = { path = "../dns/name" }
linkerd-error = { path = "../error" }
linkerd-stack = { path = "../stack" }
thiserror = "1.0"
tracing = "0.1.26"

